--- a/index.html
+++ b/index.html
@@ -180,15 +180,14 @@
         </header>
 
         <section class="about-text">
-          <p>
-            Hello!
+           <p style="color: white; white-space: nowrap;">
+            <strong>Hello!</strong>
 
-            <p>I am Jiawen Li, currently pursuing a PhD in the <a href="https://www.cbms.k.u-tokyo.ac.jp/english/index.html" target="_blank">Department of Computational Biology</a> at the <a href="https://www.u-tokyo.ac.jp/en/" target="_blank">University of Tokyo</a>, under the supervision of <a href="https://www.tsudalab.org/en/authors/admin/" target="_blank">Prof. Koji Tsuda</a>. I obtained my Master’s degree from the same lab. I was a visiting scholar in <a href="https://scholar.google.com/citations?user=7ICaR4EAAAAJ&hl=en" target="_blank">Assoc. Prof. Olexandr Isayev</a>'s lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
-
+            I am Jiawen Li, currently pursuing a PhD in the <a href="https://www.cbms.k.u-tokyo.ac.jp/english/index.html" style="color: white;">Department of Computational Biology</a> at the <a href="https://www.u-tokyo.ac.jp/en/" style="color: white;">University of Tokyo</a>, under the supervision of <a href="https://www.tsudalab.org/en/authors/admin/" style="color: white;">Prof. Koji Tsuda</a>. I obtained my Master’s degree from the same lab. I was a visiting scholar in <a href="https://scholar.google.com/citations?user=7ICaR4EAAAAJ&hl=en" style="color: white;">Assoc. Prof. Olexandr Isayev</a>'s lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
           </p>
 
-          <p>
-            <p>I was a research student in <a href="https://scholar.google.com/citations?user=tYabznkAAAAJ&hl=en" target="_blank">Prof. Masahiro Fujita</a>'s lab in Electrical Engineering and Information Systems at the University of Tokyo. Prior to this, I received my Bachelor’s degree in the <a href="http://csee.hnu.edu.cn/home.htm" target="_blank">Department of Computer Science and Electric Engineering</a> from <a href="http://www-en.hnu.edu.cn/index.htm" target="_blank">Hunan University</a>.
+          <p style="color: white; white-space: nowrap;">
+            I was a research student in <a href="https://scholar.google.com/citations?user=tYabznkAAAAJ&hl=en" tstyle="color: white;">Prof. Masahiro Fujita</a>'s lab in Electrical Engineering and Information Systems at the University of Tokyo. Prior to this, I received my Bachelor’s degree in the <a href="http://csee.hnu.edu.cn/home.htm" style="color: white;">Department of Computer Science and Electric Engineering</a> from <a href="http://www-en.hnu.edu.cn/index.htm" style="color: white;">>Hunan University</a>.
 
           </p>
         </section>
