--- a/index.html
+++ b/index.html
@@ -183,13 +183,14 @@
            <p style="color: white; white-space: nowrap;">
             <strong>Hello!</strong>
 
-            I am Jiawen Li, currently pursuing a PhD in the <a href="https://www.cbms.k.u-tokyo.ac.jp/english/index.html" style="color: white;">Department of Computational Biology</a> at the <a href="https://www.u-tokyo.ac.jp/en/" style="color: white;">University of Tokyo</a>, under the supervision of <a href="https://www.tsudalab.org/en/authors/admin/" style="color: white;">Prof. Koji Tsuda</a>. I obtained my Master’s degree from the same lab. I was a visiting scholar in <a href="https://scholar.google.com/citations?user=7ICaR4EAAAAJ&hl=en" style="color: white;">Assoc. Prof. Olexandr Isayev</a>'s lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
+            I am Jiawen Li, currently pursuing a PhD in the <a href="https://www.cbms.k.u-tokyo.ac.jp/english/index.html" style="color: transparent; text-decoration: none;">Department of Computational Biology</a> at the <a href="https://www.u-tokyo.ac.jp/en/" style="color: transparent; text-decoration: none;">University of Tokyo</a>, under the supervision of <a href="https://www.tsudalab.org/en/authors/admin/" style="color: transparent; text-decoration: none;">Prof. Koji Tsuda</a>. I obtained my Master’s degree from the same lab. I was a visiting scholar in <a href="https://scholar.google.com/citations?user=7ICaR4EAAAAJ&hl=en" style="color: transparent; text-decoration: none;">Assoc. Prof. Olexandr Isayev</a>'s lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
           </p>
 
-          <p style="color: white; white-space: nowrap;">
-            I was a research student in <a href="https://scholar.google.com/citations?user=tYabznkAAAAJ&hl=en" tstyle="color: white;">Prof. Masahiro Fujita</a>'s lab in Electrical Engineering and Information Systems at the University of Tokyo. Prior to this, I received my Bachelor’s degree in the <a href="http://csee.hnu.edu.cn/home.htm" style="color: white;">Department of Computer Science and Electric Engineering</a> from <a href="http://www-en.hnu.edu.cn/index.htm" style="color: white;">>Hunan University</a>.
 
+          <p>
+            I was a research student in <a href="https://scholar.google.com/citations?user=tYabznkAAAAJ&hl=en" target="_blank" style="color: transparent; text-decoration: none;">Prof. Masahiro Fujita</a>'s lab in Electrical Engineering and Information Systems at the University of Tokyo. Prior to this, I received my Bachelor’s degree in the <a href="http://csee.hnu.edu.cn/home.htm" target="_blank" style="color: transparent; text-decoration: none;">Department of Computer Science and Electric Engineering</a> from <a href="http://www-en.hnu.edu.cn/index.htm" target="_blank" style="color: transparent; text-decoration: none;">Hunan University</a>.
           </p>
+
         </section>
 
 
