--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <div class="info-content">
           <h1 class="name" title="Li Jiawen">Li Jiawen</h1>
 
-          <p class="title">PhD student in computational biologyr</p>
+          <p class="title">PhD student</p>
+          <p class="title">in computational biologyr</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -81,30 +82,14 @@
 
           <li class="contact-item">
 
-<!--             <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div> -->
-            <i class="fa-brands fa-weixin"></i>
+            <div class="icon-box">
+              <ion-icon name="Typing"></ion-icon>
+            </div>
 
             <div class="contact-info">
               <p class="contact-title">WeChat</p>
 
               <a href="tel:+12133522795" class="contact-link">asheng-_</a>
-            </div>
-
-          </li>
-
-          <li class="contact-item">
-
-           <!--  <div class="icon-box">
-              <ion-icon name="calendar-outline"></ion-icon>
-            </div> -->
-            <i class="fab fa-linkedin-in"></i>
-
-            <div class="contact-info">
-              <p class="contact-title">Linkedin</p>
-
-              <a href="https://www.linkedin.com/in/jiawen-li-7604241b9/" target="_blank">https://www.linkedin.com/in/jiawen-li-7604241b9/</a>
             </div>
 
           </li>
@@ -180,16 +165,16 @@
         </header>
 
         <section class="about-text">
-           <p style="color: white; white-space: nowrap;">
+          <p style="color: white; white-space: nowrap;">
             <strong>Hello!</strong>
 
-            I am Jiawen Li, currently pursuing a PhD in the <a href="https://www.cbms.k.u-tokyo.ac.jp/english/index.html" style="color: transparent; text-decoration: none;">Department of Computational Biology</a> at the <a href="https://www.u-tokyo.ac.jp/en/" style="color: transparent; text-decoration: none;">University of Tokyo</a>, under the supervision of <a href="https://www.tsudalab.org/en/authors/admin/" style="color: transparent; text-decoration: none;">Prof. Koji Tsuda</a>. I obtained my Master’s degree from the same lab. I was a visiting scholar in <a href="https://scholar.google.com/citations?user=7ICaR4EAAAAJ&hl=en" style="color: transparent; text-decoration: none;">Assoc. Prof. Olexandr Isayev</a>'s lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
+            I am Jiawen Li, currently pursuing a PhD in the Department of Computational Biology at the University of Tokyo, under the supervision of Prof. Koji Tsuda. I obtained my Master’s degree from the same lab. I was a visiting scholar in Assoc. Prof. Olexandr Isayev's lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
           </p>
-
 
           <p>
-            I was a research student in <a href="https://scholar.google.com/citations?user=tYabznkAAAAJ&hl=en" target="_blank" style="color: transparent; text-decoration: none;">Prof. Masahiro Fujita</a>'s lab in Electrical Engineering and Information Systems at the University of Tokyo. Prior to this, I received my Bachelor’s degree in the <a href="http://csee.hnu.edu.cn/home.htm" target="_blank" style="color: transparent; text-decoration: none;">Department of Computer Science and Electric Engineering</a> from <a href="http://www-en.hnu.edu.cn/index.htm" target="_blank" style="color: transparent; text-decoration: none;">Hunan University</a>.
+            I was a research student in Prof. Masahiro Fujita's lab in Electrical Engineering and Information Systems at the University of Tokyo. Prior to this, I received my Bachelor’s degree in the Department of Computer Science and Electric Engineering from Hunan University.
           </p>
+
 
         </section>
 
