--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1 class="name" title="Li Jiawen">Li Jiawen</h1>
 
           <p class="title">PhD student</p>
-          <p class="title">in computational biologyr</p>
+          <p class="title">in computational biology</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -83,7 +83,8 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="Typing"></ion-icon>
+              <!-- <ion-icon name="Typing"></ion-icon> -->
+              <i class="fa-brands fa-weixin"></i>
             </div>
 
             <div class="contact-info">
