--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </header>
 
         <section class="about-text">
-          <p style="color: white; white-space: nowrap;">
+          <p>
             <strong>Hello!</strong>
 
             I am Jiawen Li, currently pursuing a PhD in the Department of Computational Biology at the University of Tokyo, under the supervision of Prof. Koji Tsuda. I obtained my Master’s degree from the same lab. I was a visiting scholar in Assoc. Prof. Olexandr Isayev's lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
@@ -184,7 +184,7 @@
           - service
         -->
 
-       <!--  <section class="service">
+        <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
@@ -255,9 +255,9 @@
 
             </li>
 
-          </ul> -->
+          </ul>
 
-        <!-- </section> -->
+        </section>
 
 
 
