--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <!-- <ion-icon name="Typing"></ion-icon> -->
-              <i class="fa-brands fa-weixin"></i>
+              <ion-icon name="message-rounded"></ion-icon>
             </div>
 
             <div class="contact-info">
@@ -184,7 +183,7 @@
           - service
         -->
 
-        <section class="service">
+        <!-- <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
@@ -257,7 +256,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
 
@@ -266,7 +265,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+     <!--  <article class="resume" data-page="resume">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -459,7 +458,7 @@
 
       </article>
 
-
+ -->
 
 
 
@@ -467,7 +466,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <!-- <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
@@ -698,7 +697,7 @@
         </section>
 
       </article>
-
+ -->
 
 
       <!--
