--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="message-rounded"></ion-icon>
+              <ion-icon name="message-rounded-dots"></ion-icon>
             </div>
 
             <div class="contact-info">
@@ -177,6 +177,7 @@
 
 
         </section>
+      </article>
 
 
         <!--
@@ -265,7 +266,7 @@
         - #RESUME
       -->
 
-     <!--  <article class="resume" data-page="resume">
+      <article class="resume" data-page="resume">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -458,7 +459,7 @@
 
       </article>
 
- -->
+
 
 
 
@@ -466,7 +467,7 @@
         - #PORTFOLIO
       -->
 
-      <!-- <article class="portfolio" data-page="portfolio">
+      <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
@@ -697,7 +698,6 @@
         </section>
 
       </article>
- -->
 
 
       <!--
