--- a/index.html
+++ b/index.html
@@ -83,13 +83,27 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="message-rounded-dots"></ion-icon>
+              <ion-icon name="logo-wechat"></ion-icon>
             </div>
 
             <div class="contact-info">
               <p class="contact-title">WeChat</p>
 
               <a href="tel:+12133522795" class="contact-link">asheng-_</a>
+            </div>
+
+          </li>
+
+          <li class="contact-item">
+
+            <div class="icon-box">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">WeChat</p>
+
+              <a href="https://www.linkedin.com/in/jiawen-li-7604241b9/" class="contact-link">jiawen-li-7604241b9</a>
             </div>
 
           </li>
@@ -167,7 +181,9 @@
         <section class="about-text">
           <p>
             <strong>Hello!</strong>
+          </p>
 
+          <p>
             I am Jiawen Li, currently pursuing a PhD in the Department of Computational Biology at the University of Tokyo, under the supervision of Prof. Koji Tsuda. I obtained my Master’s degree from the same lab. I was a visiting scholar in Assoc. Prof. Olexandr Isayev's lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
           </p>
 
