--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="contact-info">
-              <p class="contact-title">WeChat</p>
+              <p class="contact-title">Linkedin</p>
 
               <a href="https://www.linkedin.com/in/jiawen-li-7604241b9/" class="contact-link">jiawen-li-7604241b9</a>
             </div>
@@ -150,10 +150,6 @@
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
-          </li>
-
-          <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
           <li class="navbar-item">
@@ -483,7 +479,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <!-- <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
@@ -713,7 +709,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
       <!--
