--- a/index.html
+++ b/index.html
@@ -528,41 +528,48 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">The University of Tokyo</h4>
 
-              <span>2007 — 2008</span>
+              <span>2022.04 - present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                PhD Candidate,  Tsuda Lab, Computational Biology, Graduate School of Frontier Sciences
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">The University of Tokyo</h4>
 
-              <span>2006 — 2007</span>
+              <span>2019.09 - 2022.03</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Master Degree,  Tsuda Lab, Computational Biology, Graduate School of Frontier Sciences
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">The University of Tokyo</h4>
 
-              <span>2002 — 2004</span>
+              <span>2018.09 - 2019.09</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Research Student, Electrical Engineering and Information Systems, Graduate School of Engineering
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Hunan University (China)</h4>
+
+              <span>2014.09 - 2018.07</span>
+
+              <p class="timeline-text">
+                Bachelor Degree, Computer Science, College of Computer Science and Electronic Engineering
               </p>
 
             </li>
@@ -585,9 +592,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Preferred Networks, Inc. (Tokyo), Drug Discovery Group, Part-time researcher</h4>
 
-              <span>2015 — Present</span>
+              <span>2023.12 — 2024.07</span>
 
               <p class="timeline-text">
                 Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
@@ -599,9 +606,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Carnegie Mellon University (U.S.), Department of Computational Biology, Visiting Scholar</h4>
 
-              <span>2013 — 2015</span>
+              <span>2023.09 -- 2023.11</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -613,9 +620,51 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">The University of Tokyo (Tokyo), Research Assistant</h4>
 
-              <span>2010 — 2013</span>
+              <span>2023.04 -- present</span>
+
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Preferred Networks, Inc. (Tokyo), Drug Discovery Group, Summer Internship</h4>
+
+              <span>2023.08 -- 2023.09</span>
+
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Olympic Broadcasting Services(Spain), Olympic Broadcasting Center, Archive Department</h4>
+
+              <span>2021.07 -- 2021.09</span>
+
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Institute of Physical and Chemical Research (Riken), Advanced Intelligence Project, Molecular Informatics Team, Student Trainee</h4>
+
+              <span>2019.12 -- 2021.09</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -638,51 +687,10 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
+                <h5 class="h5">Proficient in programming languages such as C, C++, C#, Python, and Java.</h5>
+                <h5 class="h5">Experienced in machine learning, statistical analysis, molecular biology, and materials science, with in-depth research experience in interdisciplinary fields such as computational biology and materials science.</h5>
+                <h5 class="h5">Skilled in using open-source frameworks such as Spark, TensorFlow, PyTorch, RDKit, and ChemAxon, and familiar with paradigms such as Transformer, CNN, GNN, GAN, VAE, and DM.</h5>
 
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
 
             </li>
