--- a/index.html
+++ b/index.html
@@ -205,17 +205,15 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            <strong>Hello!</strong>
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            I am Jiawen Li, currently pursuing a PhD in the Department of Computational Biology at the University of Tokyo, under the supervision of Prof. Koji Tsuda. I obtained my Master’s degree from the same lab. I was a visiting scholar in Assoc. Prof. Olexandr Isayev's lab in the Department of Chemistry at Carnegie Mellon University in Fall 2023. My research interests involve <strong>Machine Learning, Statistical Science, and their applications in Drug Discovery and Materials Design</strong>.
+          </p>
+
+          <p>
+            I was a research student in Prof. Masahiro Fujita's lab in Electrical Engineering and Information Systems at the University of Tokyo. Prior to this, I received my Bachelor’s degree in the Department of Computer Science and Electric Engineering from Hunan University.
           </p>
         </section>
 
