--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Li Jiawen" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+          <h1 class="name" title="Li Jiawen">Li Jiawen</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">PhD student</p>
+          <p class="title">in computational biology</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
