--- a/index.html
+++ b/index.html
@@ -883,8 +883,14 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/dir//Tokyo/@35.6764155,139.6088277,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x605d1b87f02e57e7:0x2e01618b22571b89!2m2!1d139.650027!2d35.6764225?entry=ttu"
-              width="400" height="300" loading="lazy"></iframe>
+              width="400"
+              height="300"
+              style="border:0"
+              loading="lazy"
+              allowfullscreen
+              referrerpolicy="no-referrer-when-downgrade"
+              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB8ECTzmT5P22HggG3kfr-jBYQHxaMGXpM&origin=place_id:ChIJo24g-i-MGGARlboTg0kH5DA">
+            </iframe>
           </figure>
         </section>
 
