--- a/index.html
+++ b/index.html
@@ -882,15 +882,7 @@
 
         <section class="mapbox" data-mapbox>
           <figure>
-            <iframe
-              width="400"
-              height="300"
-              style="border:0"
-              loading="lazy"
-              allowfullscreen
-              referrerpolicy="no-referrer-when-downgrade"
-              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB8ECTzmT5P22HggG3kfr-jBYQHxaMGXpM&origin=place_id:ChIJo24g-i-MGGARlboTg0kH5DA">
-            </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6479.008522634437!2d139.76016227728098!3d35.71381507257676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c2ffa206ea3%3A0x30e407498313ba95!2z5p2x5Lqs5aSn5a2m!5e0!3m2!1sja!2sjp!4v1722948164127!5m2!1sja!2sjp" width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
 
