--- a/index.html
+++ b/index.html
@@ -610,16 +610,15 @@
           <ul class="skills-list content-card">
 
             <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Proficient in programming languages such as C, C++, C#, Python, and Java.</h5>
-              </div>
-              <div class="title-wrapper">
-                <h5 class="h5">Experienced in machine learning, statistical analysis, molecular biology, and materials science, with in-depth research experience in interdisciplinary fields such as computational biology and materials science.</h5>
-              </div>
-              <div class="title-wrapper">
-                <h5 class="h5">Skilled in using open-source frameworks such as Spark, TensorFlow, PyTorch, RDKit, and ChemAxon, and familiar with paradigms such as Transformer, CNN, GNN, GAN, VAE, and DM.</h5>
-              </div>
+              <p>
+              Proficient in programming languages such as C, C++, C#, Python, and Java.
+              </p>
+              <p>
+              Experienced in machine learning, statistical analysis, molecular biology, and materials science, with in-depth research experience in interdisciplinary fields such as computational biology and materials science.
+              </p>
+              <p>
+              Skilled in using open-source frameworks such as Spark, TensorFlow, PyTorch, RDKit, and ChemAxon, and familiar with paradigms such as Transformer, CNN, GNN, GAN, VAE, and DM.
+              </p>
 
             </li>
 
