--- a/index.html
+++ b/index.html
@@ -610,14 +610,14 @@
           <ul class="skills-list content-card">
 
             <li class="skills-item">
-              <p>
-              Proficient in programming languages such as C, C++, C#, Python, and Java.
+              <p style="color: white;">
+                · Proficient in programming languages such as C, C++, C#, Python, and Java.
               </p>
-              <p>
-              Experienced in machine learning, statistical analysis, molecular biology, and materials science, with in-depth research experience in interdisciplinary fields such as computational biology and materials science.
+              <p style="color: white;">
+                · Experienced in machine learning, statistical analysis, molecular biology, and materials science, with in-depth research experience in interdisciplinary fields such as computational biology and materials science.
               </p>
-              <p>
-              Skilled in using open-source frameworks such as Spark, TensorFlow, PyTorch, RDKit, and ChemAxon, and familiar with paradigms such as Transformer, CNN, GNN, GAN, VAE, and DM.
+              <p style="color: white;">
+                · Skilled in using open-source frameworks such as Spark, TensorFlow, PyTorch, RDKit, and ChemAxon, and familiar with paradigms such as Transformer, CNN, GNN, GAN, VAE, and DM.
               </p>
 
             </li>
