--- a/index.html
+++ b/index.html
@@ -164,14 +164,11 @@
       </nav>
 
 
-
-
-
       <!--
         - #ABOUT
       -->
 
-      <article class="about  active" data-page="about">
+      <article class="about" data-page="about">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -201,7 +198,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume  active" data-page="resume">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
