--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         - #ABOUT
       -->
 
-      <article class="about" data-page="about">
+      <article class="about active" data-page="about">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -198,7 +198,7 @@
         - #RESUME
       -->
 
-      <article class="resume  active" data-page="resume">
+      <article class="resume" data-page="resume">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -442,6 +442,8 @@
 
   </main>
 
+
+<script src="./assets/js/script.js"></script>
 
 
 
