--- a/index.html
+++ b/index.html
@@ -144,31 +144,27 @@
       -->
 
       <nav class="navbar">
-
         <ul class="navbar-list">
-
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <a href="#about" class="navbar-link" data-nav-link>About</a>
           </li>
-
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <a href="#resume" class="navbar-link" data-nav-link>Resume</a>
           </li>
-
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
+            <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
           </li>
-
         </ul>
-
       </nav>
+
 
 
       <!--
         - #ABOUT
       -->
 
-      <article class="about active" data-page="about">
+      <!-- <article class="about active" data-page="about"> -->
+      <article id="about" class="about active">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -198,7 +194,8 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <!-- <article class="resume" data-page="resume"> -->
+      <article id="resume" class="resume active">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -401,7 +398,8 @@
         - #CONTACT
       -->
 
-      <article class="contact" data-page="contact">
+      <!-- <article class="contact" data-page="contact"> -->
+      <article id="contact" class="contact">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
