--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       -->
 
       <!-- <article class="about active" data-page="about"> -->
-      <article id="about" class="about active">
+      <article id="about" class="section active">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
@@ -195,7 +195,7 @@
       -->
 
       <!-- <article class="resume" data-page="resume"> -->
-      <article id="resume" class="resume active">
+      <article id="resume" class="section">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -399,7 +399,7 @@
       -->
 
       <!-- <article class="contact" data-page="contact"> -->
-      <article id="contact" class="contact">
+      <article id="contact" class="section">
 
         <header>
           <h2 class="h2 article-title">Contact</h2>
