--- a/index.html
+++ b/index.html
@@ -373,15 +373,18 @@
 
             <li class="skills-item">
               <p style="color: white;">
-                · Proficient in programming languages such as C, C++, C#, Python, and Java.
+                ·  Proficient in programming languages such as C, C++, C#, Python, and Java.
               </p>
+            </li>
+            <li class="skills-item">
               <p style="color: white;">
-                · Experienced in machine learning, statistical analysis, molecular biology, and materials science, with in-depth research experience in interdisciplinary fields such as computational biology and materials science.
+                ·  Experienced in machine learning, statistical analysis, molecular biology, and materials science, with in-depth research experience in interdisciplinary fields such as computational biology and materials science.
               </p>
+            </li>
+            <li class="skills-item">
               <p style="color: white;">
-                · Skilled in using open-source frameworks such as Spark, TensorFlow, PyTorch, RDKit, and ChemAxon, and familiar with paradigms such as Transformer, CNN, GNN, GAN, VAE, and DM.
+                ·  Skilled in using open-source frameworks such as Spark, TensorFlow, PyTorch, RDKit, and ChemAxon, and familiar with paradigms such as Transformer, CNN, GNN, GAN, VAE, and DM.
               </p>
-
             </li>
 
           </ul>
